# heckin-chonker-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/: pull_request_template.md
.github/workflows/: docker-build.yml  pre-commit.yml
config/: .env.example
docker/: prestart.sh  start.sh
heckin_chonker_bot/: bot.py  config.py
